src/App.css
/* ... */
@media only screen and (min-width: 441px) {
  .page-top {
    padding: 1.5em 2em;
  }
}

.page-els-wrapper {
  padding: 0 1em;
}

/* CSS rules for unsuccessful RTK query responses e.g. isLoading, isError  */
.rtk-query-msg {
  margin: 1em auto 0;
}

/* CSS rules for styled buttons */
.window-close-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  background: none;
}

.window-close-icon {
  font-size: 1.6rem;
}

.blue-btn,
.yellow-btn {
  transition: 0.6s;
  border: none;
  border-radius: 10px;
  padding: 0.7em 1em;
  font-size: 1rem;
}

.yellow-btn {
  background: #FFD60A;
}

.blue-btn {
  background: #003566;
  color: #FEFEFE;
}

.blue-btn:hover {
  background: #001D3D;
}

.yellow-btn:hover {
  background: #FFC300;
}

.icon-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.6s;
  border-radius: 50px;
  padding: 0.6em;
}

.yellow-icon-btn {
  border: none;
  background: #FFD60A;
}

.yellow-icon-btn:hover {
  background: #FFC300;
}

.blue-icon-btn {
  border: none;
  background: #003566;
  color: #FEFEFE;
}

.blue-icon-btn:hover {
  background: #001D3D;
}

.btn-icon {
  font-size: 1.4rem;
}

/* CSS rules for modal forms */
.modal-form-overlay {
  position: fixed;
  /* Z-index revents later elements from stacking above this overlay */
  z-index: 1;
  top: 0;
  left: 0;
  /* Display and align-items allow centering of modal */
  display: grid;
  align-items: center;
  overflow: scroll;
  height: 100vh;
  width: 100vw;
  background: rgba(0, 8, 20, 0.7);
}

.closed-modal {
  display: none;
}

.modal-form-wrapper {
  display: flex;
  flex-direction: column;
  margin: 1em auto;
  box-shadow: 0 0 4px #222222;
  border-radius: 8px;
  width: 480px;
  max-width: calc(100vw - 2em);
  background: #FEFEFE;
}

.modal-form-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 8px 8px 0 0;
  padding: 0.8em;
  background: #FFD60A;
}

.modal-form-text-wrapper {
  margin: 1em 1em 0;
}

.modal-form-text-wrapper h4 {
  font-size: 1.2rem;
}

.modal-form-text-wrapper p {
  margin-top: 1em;
  text-align: justify;
}

.modal-form-wrapper form {
  display: flex;
  flex-direction: column;
  padding: 1em;
}

.modal-form-wrapper label {
  margin-bottom: 0.5em;
  font-weight: 500;
  text-align: start;
  color: #7F8389;
}

.modal-form-wrapper label>span {
  color: #FF4300;
}

.modal-form-wrapper input,
.modal-form-wrapper textarea {
  transition: 0.6s;
  margin-bottom: 1.1em;
  box-shadow: inset 0 0 2px #222222;
  border: none;
  border-radius: 6px;
}

.modal-form-wrapper input {
  height: 2rem;
  padding-left: 0.6em;
}

.modal-form-wrapper textarea {
  padding: 0.6em;
  font-weight: 400;
}

.modal-form-wrapper input:focus {
  height: 2.2rem;
}

.modal-form-wrapper>form>p {
  margin-bottom: 1em;
  font-size: 0.9rem;
}

.modal-btn-wrapper {
  display: flex;
  justify-content: space-between;
  margin-bottom: 1em;
}

.modal-btn,
.modal-btn-small {
  transition: 0.6s;
  border: none;
  height: 3em;
  font-size: 1rem;
}

.modal-btn {
  border-radius: 50px;
  width: 100%;
  background: #003566;
  color: #FEFEFE;
}

.modal-btn:hover {
  background: #001D3D;
}

.modal-btn-small {
  border-radius: 10px;
  width: calc(50% - 0.5em);
  background: #FFD60A;
}

.modal-btn-small:hover {
  background: #FFC300;
}

.rtk-query-form-msg {
  margin-top: 1em;
  color: #FF4300;
}

/* CSS rules for hiding / showing elements on a narrow display */

@media only screen and (max-width: 440px) {
  .large-display-el {
    display: none;
  }
}

@media only screen and (min-width: 441px) {
  .small-display-el {
    display: none;
  }
}


/* COMMON COMPONENTS */


/* || Sidebar */

@media only screen and (min-width: 560px) {
  .sidebar {
    display: none;
  }
}

@media only screen and (max-width: 559px) {
  .sidebar {
    position: absolute;
    /* Z-index needed to stack sidebar above positioned elements e.g. login  */
    z-index: 1;
    top: 0;
    /* Width minus box-shadow to ensure shadow is concealed */
    left: calc(-50vw - 30px);
    box-shadow: 0 0 30px #222222;
    height: 100%;
    width: 50vw;
    background: #001D3D;
    text-align: start;
    transition: 0.7s;
    font-size: 1.2rem;
    color: #FEFEFE;
  }

  .visible-sidebar {
    left: 0;
  }

  .sidebar ul {
    position: sticky;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 45vh;
  }

  .sidebar ul li {
    align-self: center;
  }
}


/* || Header */

header {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1em 2em;
  background: #000814;
}

header ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  width: 100%;
}

header ul li {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.5em;
  color: #FEFEFE;
  font-size: 1.1rem;
}

.header-icon {
  color: #FFC300;
}


/* || Nav */

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1em;
}

.nav-icon {
  cursor: pointer;
  font-size: 3rem;
}

@media only screen and (min-width: 560px) {
  nav ul {
    display: flex;
    justify-content: space-around;
  }

  nav ul li:not(:last-child) {
    margin-right: 8vw;
  }

  .nav-icon {
    display: none;
  }
}

@media only screen and (max-width: 559px) {
  nav ul {
    display: none;
  }
}

@media only screen and (min-width: 441px) {
  nav {
    padding: 1.5em 2em;
  }
}


/* || NavMenu */

.nav-menu li a.active {
  text-decoration: underline;
}


/* PAGES */


/* || HOME */

/* For placeholder elements on pages with no current content. */
.temp-wrapper {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin: 0;
  box-shadow: 0 0 4px #222222;
  border-radius: 4px;
  width: 360px;
  max-width: 66vw;
  padding: 2em;
  background: #FEFEFE;
}

.temp-wrapper>*:not(:last-child) {
  margin-bottom: 16px;
}
/* ... */

